deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matterbuild-service
spec:
  type: NodePort
  selector:
    app: matterbuild
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: https
    port: 8443
    targetPort: https
